<resources>
    <string name="app_name">Agenda</string>


    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--ATIVIDAD REGISTROS-->
    <string name="CrearCuentaTXT">Crear una Cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CorreoEt">Correo electrónico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>

    <!--ACTIVIDAD LOGIN-->
    <string name="IniciarSesionTXT">Iniciar sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLoging">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarionuevoTXT">¿Eres nuevo? Registrate aquí</string>

    <!--MENÚ PRINCIPAL-->
    <string name="BinvenidoPrincipal">Bienvenid@</string>
    <string name="UidPrincipal"> -- </string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>
    <string name="EstadoCuentaPrincipal">No verificado</string>

    <string name="AgregarNotas">Agregar</string>
    <string name="ListarNotas">Mis Notas</string>
    <string name="Importantes">Importantes</string>
    <string name="Contactos">Contactos</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="CerrarSesion">Salir</string>

    <!--AGREGAR NOTA-->
    <string name="Uid_Usuario">Uid del usuario</string>
    <string name="Correo_Usuario">Correo de usuario</string>
    <string name="Fecha_hora_actual_TXT">Fecha de registro</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo">Título</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Estado">No finalizado</string>

    <!--MENU-->
    <string name="Agregar_Nota_BD">Agregar</string>
    <string name="Actualizar_Nota_BD">Actualizar</string>
    <string name="Vaciar_Todas_las_Notas">Vaciar todas las Notas</string>
    <string name="Perfil_usuario">Perfil del usuario</string>
    <string name="Actualizar_Pass">Actualizar pass</string>
    <string name="Agregar_contacto">Agregar contacto</string>
    <string name="Vaciar_Contactos">Eliminar todos los contactos</string>
    <string name="Buscar_Contactos">Buscar Contactos</string>


    <!-- ITEM NOTA -->
    <string name="Id_nota_Item">Id nota</string>
    <string name="Uid_Usuario_Item">Uid del usuario</string>
    <string name="Correo_Usuario_Item">Correo de usuario</string>
    <string name="Fecha_hora_regitro_Item">Fecha y hora registro</string>
    <string name="Titulo_Item">Título</string>
    <string name="Descripcion_Item">Descripcion</string>
    <string name="Fecha_Item">00/00/0000</string>
    <string name="Estado_Item">No finalizado</string>


    <!-- ITEM NOTA IMPORTANTE -->
    <string name="Id_nota_Item_I">Id nota</string>
    <string name="Uid_Usuario_Item_I">Uid del usuario</string>
    <string name="Correo_Usuario_Item_I">Correo de usuario</string>
    <string name="Fecha_hora_regitro_Item_I">Fecha y hora registro</string>
    <string name="Titulo_Item_I">Título</string>
    <string name="Descripcion_Item_I">Descripcion</string>
    <string name="Fecha_Item_I">00/00/0000</string>
    <string name="Estado_Item_I">No finalizado</string>

    <!-- ITEM CONTACTO -->
    <string name="Id_C_Item">Id Contacto</string>
    <string name="Uid_C_Item">Uid usuario</string>
    <string name="nombres_C_Item">Nombres</string>
    <string name="apellidos_C_Item">Apellidos</string>
    <string name="correo_C_Item">Correo</string>
    <string name="telefono_C_Item">Telefono</string>
    <string name="fec_nacimiento_C_Item">Fecha de nacimiento</string>
    <string name="edad_C_Item">Edad</string>
    <string name="institucion_C_Item">Institucion</string>
    <string name="direccion_C_Item">Direccion</string>


    <!--CUADO DE DIALOGO OPCIONES-->
    <string name="ElijaOpcionTXT">Elija una opcion</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>

    <!--CUADO DE DIALOGO VERIFICACION-->
    <string name="CuentaVerificadaTXT">Cuenta verificada</string>
    <string name="EntendidoVerificado">Entendido</string>

    <!--CUADO DE DIALOGO ELIMINAR NOTA IMPORTANTE-->
    <string name="EliminarNotaImportante">¿Desea eliminar esa Nota de la lista?</string>
    <string name="EliminarNota">Eliminar</string>
    <string name="EliminarNotaCancelar">Cancelar</string>

    <!--CUADRO DE DIALOGO - ESTABLECER TELEFONO-->
    <string name="Establecer_Telefono">Escriba su telefono</string>
    <string name="Btn_Aceptar_Telefono">Aceptar</string>

    <!--CUADRO DE DIALOGO - ELEGIR IMAGEN-->
    <string name="ElegirImagenTXT">Elegir imagen de:</string>
    <string name="Btn_Elegir_Galeria">Galería</string>
    <string name="Btn_Elegir_Camara">Cámara</string>

    <!--CUADRO DE DIALOGO - ELEGIR IMAGEN-->
    <string name="ValidarTXT">Por favor complete el campo Nombre</string>
    <string name="Btn_Validar_Registro_C">Entendido</string>

    <!--CUADRO DE DIALOGO - OPCCIONES CONTACTO-->
    <string name="ElegirOpcionContactoTXT">Seleccione una opcion para el contacto</string>
    <string name="Btn_Eliminar_C">Eliminar</string>
    <string name="Btn_Actualizar_C">Actualizar</string>


    <!--ACTUALIZAR NOTA-->
    <string name="Id_nota_A">Id nota</string>
    <string name="Uid_Usuario_A">Uid del usuario</string>
    <string name="Correo_Usuario_A">Correo de usuario</string>
    <string name="Fecha_registro_A">Fecha de registro</string>
    <string name="Titulo_A">Título</string>
    <string name="Descripcion_A">Descripcion</string>
    <string name="Btn_Calendario_A">Calendario</string>
    <string name="Fecha_A">00/00/0000</string>
    <string name="Estado_A">No finalizado</string>
    <string name="Estado_nuevo"> -- </string>

    <!--SPINNER ESTADO-->
    <string-array name="Estado_nota">
        <item>"No finalizado</item>
        <item>"Finalizado</item>
    </string-array>

    <!--DETALLE NOTA-->
    <string name="Id_nota_Detalle_TXT">Id de la nota: </string>
    <string name="Uid_usuario_Detalle_TXT">Uid del usuario: </string>
    <string name="Correo_Detalle_TXT">Correo del usuario: </string>
    <string name="Titulo_Detalle_TXT">Titulo: </string>
    <string name="Descripcion_Detalle_TXT">Descripcion: </string>
    <string name="Fecha_Registro_Detalle_TXT">Fecha de registro: </string>
    <string name="Fecha_Nota_Detalle_TXT">Fecha de la nota: </string>
    <string name="Estado_Detalle_TXT">Estado de la nota: </string>
    <string name="Id_nota_Detalle">Id nota</string>
    <string name="Uid_usuario_Detalle">Uid usuario</string>
    <string name="Correo_Detalle">Correo usuario</string>
    <string name="Titulo_Detalle">Titulo</string>
    <string name="Descripcion_Detalle">Descripcion</string>
    <string name="Fecha_Registro_Detalle">Fecha registro</string>
    <string name="Fecha_Nota_Detalle">Fecha nota</string>
    <string name="Estado_Detalle">Estado</string>
    <string name="Boton_Importante">Importante</string>

    <!--PERFIL USUARIO-->
    <string name="Uid_Perfil">Uid</string>
    <string name="Nombres_Perfil">Mis nombres</string>
    <string name="Apellidos_Perfil">Mis apellidos</string>
    <string name="Correo_Perfil">Correo</string>
    <string name="Edad_Perfil">Edad</string>
    <string name="Telefono_Perfil">Telefono</string>
    <string name="Domicilio_Perfil">Domicilio</string>
    <string name="Institucion_Perfil">Institucion</string>
    <string name="Profesion_Perfil">Profesion</string>
    <string name="Fecha_Nacimiento_Perfil">Fecha de nac.</string>
    <string name="Guardar_Datos">Guardar Datos</string>

    <!-- PERFIL USUARIO - IMAGEN -->
    <string name="BtnElegirImagenDe">Elegir imagen de</string>
    <string name="BtnActualizarImagen">Actualizar Imagen</string>


    <!---Cambiar PASSWORD-->
    <string name="ActualPassTXT">Contraseña actual: </string>
    <string name="ActualPass"> -- </string>
    <string name="EtActualPass">Contraeña actual</string>
    <string name="EtNuevoPass">Nueva contraseña</string>
    <string name="EtRNuevoPass">Repetir nueva contraseña</string>
    <string name="BtnActualizarPass">Actualizar</string>

    <!--AGREGAR CONTACTO-->
    <string name="Uid_Usuario_C">Mi uid</string>
    <string name="Nombres_C">Nombres contacto</string>
    <string name="Apellidos_C">Apellidos contacto</string>
    <string name="Correo_C">Correo electrónico</string>
    <string name="Telefono_C">Telefono</string>
    <string name="Fecha_Nacimiento_C">Fecha de nac.</string>
    <string name="Edad_C">Edad</string>
    <string name="Institucion_C">Institucion</string>
    <string name="Direccion_C">Dirección</string>
    <string name="Btn_Agregar_Contacto">Guardar contacto</string>

    <!--DETALLE CONTACTO-->
    <string name="DetalleContactoTXT">Detalle del contacto</string>
    <string name="Id_C_D"> -- </string>
    <string name="Uid_Usuario_D"> -- </string>
    <string name="Nombres_C_D"> -- </string>
    <string name="Apellidos_C_D"> -- </string>
    <string name="Correo_C_D"> -- </string>
    <string name="Telefono_C_D"> -- </string>
    <string name="Fecha_Nacimiento_C_D"> -- </string>
    <string name="Edad_C_D"> -- </string>
    <string name="Institucion_C_D"> -- </string>
    <string name="Direccion_C_D"> -- </string>
    <string name="Imagen_C_D"> -- </string>

    <string name="Llamar_C">Llamar</string>
    <string name="Mensaje_C">Mensaje</string>


    <!--ACTUALIZAR CONTACTO-->
    <string name="Id_C_A"> -- </string>
    <string name="Uid_C_A"> -- </string>

    <string name="Nombres_C_A">Nombres</string>
    <string name="Apellidos_C_A">Apellidos </string>
    <string name="Correo_C_A">Correo </string>
    <string name="Telefono_C_A">Telefono</string>
    <string name="Fecha_Nacimiento_C_A">Fecha de nac.</string>
    <string name="Edad_C_A">Edad</string>
    <string name="Institucion_C_A">Institucion</string>
    <string name="Direccion_C_A">Direccion</string>
    <string name="Imagen_C_A"> -- </string>
    <string name="Btn_Actualizar_C_A">Actualizar</string>

    <!--INFORMACION-->
    <string name="Desarrollador">Desarrollador:</string>
    <string name="Nombre_D">Andrés Mauricio Quiñones Mosquera</string>
    <string name="CorreoSoporte">Soporte: quinonesmauricio53@gmail.com</string>
    <string name="Version">Version: 1.0</string>
    <string name="EntendidoInfo">Entendido</string>

</resources>