<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Imagen_C_Item"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/imagen_contacto" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Id_C_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/Id_C_Item"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/Uid_C_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/Uid_C_Item"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/nombres_C_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:gravity="center"
                android:text="@string/nombres_C_Item"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/apellidos_C_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:gravity="center"
                android:text="@string/apellidos_C_Item"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/correo_C_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:gravity="center"
                android:text="@string/correo_C_Item"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/telefono_C_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/telefono_C_Item"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/fec_nacimiento_C_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/fec_nacimiento_C_Item"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/edad_C_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/edad_C_Item"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/institucion_C_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/institucion_C_Item"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/direccion_C_Item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/worksans"
                android:text="@string/direccion_C_Item"
                android:textSize="18sp"
                android:visibility="gone" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>