<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contactos.Agregar_Contacto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/Uid_Usuario_C"
            android:text="@string/Uid_Usuario_C"
            android:fontFamily="@font/worksans"
            android:visibility="gone"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/agregar_contacto_bd"/>

        <EditText
            android:id="@+id/Nombres_C"
            android:hint="@string/Nombres_C"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:inputType="textCapWords|textPersonName"
            android:fontFamily="@font/worksans"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/Apellidos_C"
            android:hint="@string/Apellidos_C"
            android:layout_width="match_parent"
            android:inputType="textCapWords|textPersonName"
            android:fontFamily="@font/worksans"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/Correo_C"
            android:hint="@string/Correo_C"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/worksans"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/Direccion_C"
            android:hint="@string/Direccion_C"
            android:layout_width="match_parent"
            android:inputType="textCapWords|text"
            android:fontFamily="@font/worksans"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/Institucion_C"
            android:hint="@string/Institucion_C"
            android:layout_width="match_parent"
            android:inputType="textCapWords|text"
            android:fontFamily="@font/worksans"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/Edad_C"
            android:hint="@string/Edad_C"
            android:layout_width="match_parent"
            android:inputType="number"
            android:fontFamily="@font/worksans"
            android:layout_height="wrap_content"/>

        <!--FECHA DE NACIMIENTO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/Fecha_Nacimiento_C"
                android:hint="@string/Fecha_Nacimiento_C"
                android:fontFamily="@font/worksans"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Editar_fecha_C"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/calendario">

            </androidx.appcompat.widget.AppCompatImageView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--TELEFONO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <!--Telefono-->
            <TextView
                android:id="@+id/Telefono_C"
                android:hint="@string/Telefono_C"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:fontFamily="@font/worksans"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Editar_Telefono_C"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/editar_telefono"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Agregar Contacto-->
        <Button
            android:id="@+id/Btn_Agregar_Contacto"
            android:text="@string/Btn_Agregar_Contacto"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>