<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarNota.Actualizar_Nota">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!--Id Nota-->
        <TextView
            android:id="@+id/Id_nota_A"
            android:text="@string/Id_nota_A"
            android:textSize="18sp"
            android:visibility="gone"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Uid Usuario-->
        <TextView
            android:id="@+id/Uid_Usuario_A"
            android:hint="@string/Uid_Usuario_A"
            android:textSize="18sp"
            android:visibility="gone"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Correo-->
        <TextView
            android:id="@+id/Correo_Usuario_A"
            android:hint="@string/Correo_Usuario_A"
            android:textSize="18sp"
            android:visibility="gone"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Fecha de registro-->
        <TextView
            android:id="@+id/Fecha_registro_A"
            android:hint="@string/Fecha_registro_A"
            android:textSize="18sp"
            android:visibility="gone"
            android:fontFamily="@font/worksans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Estado de la Nota-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Tarea_Finalizada"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="#16A085"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Tarea_No_Finalizada"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:background="#E74C3C"
                android:visibility="gone"/>


            <TextView
                android:id="@+id/Estado_A"
                android:text="@string/Estado_A"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Titulo-->
        <EditText
            android:id="@+id/Titulo_A"
            android:hint="@string/Titulo_A"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/worksans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Descripcion-->
        <EditText
            android:id="@+id/Descripcion_A"
            android:hint="@string/Descripcion_A"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <!--Abrir calendario-->
            <Button
                android:id="@+id/Btn_calenadrio_A"
                android:text="@string/Btn_Calendario_A"
                app:icon="@drawable/icono_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--Visualizar fecha elegida-->
            <TextView
                android:id="@+id/Fecha_A"
                android:hint="@string/Fecha_A"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/worksans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <Spinner
                android:id="@+id/Spinner_estado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/Estado_nuevo"
                android:text="@string/Estado_nuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>